INCLUDES = -I@top_srcdir@/ $(GLOM_CFLAGS)

noinst_LIBRARIES = libdata_structure_layout.a
libdata_structure_layout_a_SOURCES = layoutitem.h layoutitem.cc \
                              layoutgroup.h layoutgroup.cc \
                              layoutitem_field.h layoutitem_field.cc \
                              layoutitem_portal.h layoutitem_portal.cc
                              

                              

                              
