SUBDIRS = layout

AM_CPPFLAGS = -I@top_srcdir@/ $(GLOM_CFLAGS)

noinst_LTLIBRARIES = libdata_structure.la
libdata_structure_la_SOURCES = field.h field.cc \
                              relationship.h relationship.cc \
                              fieldtypes.h fieldtypes.cc \
                              tableinfo.h tableinfo.cc \
                              glomconversions.h glomconversions.cc \
                              privileges.h privileges.cc \
                              groupinfo.h groupinfo.cc \
                              numeric_format.h numeric_format.cc \
                              iso_codes.h iso_codes.cc \
                              system_prefs.h system_prefs.cc \
                              print_layout.h print_layout.cc \
                              report.h report.cc \
                              translatable_item.h translatable_item.cc




